--- a/MSE802/Week4/Shared/week3_1.ipynb
+++ b/MSE802/Week4/Shared/week3_1.ipynb
@@ -7,57 +7,36 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original Matrix:\n",
-      "[[1.+0.j 2.+3.j 3.+0.j]\n",
-      " [0.+4.j 5.+0.j 6.+0.j]]\n",
-      "\n",
-      "Transpose:\n",
-      "[[1.+0.j 0.+4.j]\n",
-      " [2.+3.j 5.+0.j]\n",
-      " [3.+0.j 6.+0.j]]\n",
-      "\n",
-      "Conjugate Transpose (Hermitian Transpose):\n",
-      "[[1.-0.j 0.-4.j]\n",
-      " [2.-3.j 5.-0.j]\n",
-      " [3.-0.j 6.-0.j]]\n",
-      "\n",
-      "Adjoint:\n",
-      "[[1.-0.j 0.-4.j]\n",
-      " [2.-3.j 5.-0.j]\n",
-      " [3.-0.j 6.-0.j]]\n"
+     "ename": "KeyError",
+     "evalue": "'bloch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m state1 \u001b[38;5;241m=\u001b[39m Statevector\u001b[38;5;241m.\u001b[39mfrom_instruction(qc1)\n\u001b[0;32m      9\u001b[0m bloch_vector1 \u001b[38;5;241m=\u001b[39m state1\u001b[38;5;241m.\u001b[39mdata[:\u001b[38;5;241m2\u001b[39m]  \u001b[38;5;66;03m# Extract the qubit's amplitudes\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m plot_bloch_vector(\u001b[43mstate1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbloch\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBefore Hadamard (|0⟩)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# 2. Apply Hadamard to qubit\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'bloch'"
      ]
     }
    ],
    "source": [
-    "# transpose conjugate, adjoint\n",
+    "from qiskit import QuantumCircuit, Aer, transpile\n",
+    "from qiskit.visualization import plot_bloch_vector\n",
+    "from qiskit.quantum_info import Statevector\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "import numpy as np\n",
+    "# 1. Initial state |0>\n",
+    "qc1 = QuantumCircuit(1)\n",
+    "state1 = Statevector.from_instruction(qc1)\n",
+    "bloch_vector1 = state1.data[:2]  # Extract the qubit's amplitudes\n",
+    "plot_bloch_vector(state1.to_dict()['bloch'], title=\"Before Hadamard (|0⟩)\")\n",
+    "plt.show()\n",
     "\n",
-    "def transpose(matrix):\n",
-    "    return np.transpose(matrix)\n",
-    "\n",
-    "def conjugate_transpose(matrix):\n",
-    "    return np.conj(matrix.T)\n",
-    "\n",
-    "def adjoint(matrix):\n",
-    "    return conjugate_transpose(matrix)\n",
-    "\n",
-    "# Example usage:\n",
-    "matrix = np.array([[1, 2+3j, 3], [4j, 5, 6]])\n",
-    "print(\"Original Matrix:\")\n",
-    "print(matrix)\n",
-    "\n",
-    "print(\"\\nTranspose:\")\n",
-    "print(transpose(matrix))\n",
-    "\n",
-    "print(\"\\nConjugate Transpose (Hermitian Transpose):\")\n",
-    "print(conjugate_transpose(matrix))\n",
-    "\n",
-    "print(\"\\nAdjoint:\")\n",
-    "print(adjoint(matrix))\n"
+    "# 2. Apply Hadamard to qubit\n",
+    "qc2 = QuantumCircuit(1)\n",
+    "qc2.h(0)\n",
+    "state2 = Statevector.from_instruction(qc2)\n",
+    "plot_bloch_vector(state2.to_dict()['bloch'], title=\"After Hadamard (Superposition)\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -577,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MSC_800",
    "language": "python",
    "name": "python3"
   },
@@ -591,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
